# ya-disk-contest

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  docker-compose.yml  locustfile.py  pyproject.toml  requirements.dev.txt  requirements.txt  scratch.py  stupid_t.py  stupid_tests.py  unit_test.py
cloud/: __init__.py  __main__.py  alembic.ini  events.py  settings.py
cloud/api/: __main__.py  app.py  cleanup_ctx.py  middleware.py  model.py  payloads.py  settings.py
cloud/api_aiohttp/: __main__.py  app.py  cleanup_ctx.py  middleware.py  payloads.py
cloud/api_fastapi/: __main__.py  app.py  config_logging.py  errors.py  events.py  routers.py
cloud/db/: __main__.py  schema.py
cloud/model/: __init__.py  base.py  base_model.py  base_service.py  data_classes.py  exceptions.py  history_model.py  import_model.py  import_service.py  item_list_model.py  node_model.py  node_service.py  node_tree.py  query_builder.py  schemas.py
cloud/models/: __init__.py  schemas.py
cloud/queries/: import_queries.py  item_table_queries.py
cloud/services/: base.py  history_service.py  import_service.py  node_service.py
cloud/utils/: __init__.py  argparse.py  arguments_parse.py  db.py  pg.py  queue_worker.py  testing.py  typer_meets_pydantic.py
disk/: __main__.py  settings.py
disk/api_aiohttp/: __main__.py  app.py  middleware.py  payloads.py
disk/api_fastapi/: __main__.py  app.py  config_logging.py  errors.py  routers.py
disk/db/: __main__.py
disk/models/: node_tree.py  schemas.py
disk/resources/: url_paths.py
disk/services/: __init__.py  base.py  history_service.py  import_service.py  node_service.py
disk/utils/: arguments_parse.py  pg.py  (+2 more)
docs/: Task.md  openapi.yaml
tests/: conftest.py  get_node_cases.py  post_import_cases.py
(+79 files in other folders)
