[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "ya-disk-contest"
version = "0.1.0"
authors = [
  { name="Andrey Khabirov", email="mr.rovan@yandex.ru" }
]
description = "REST API service implementing backend for a file storage web service, like the Yandex Disk service"
readme = "README.md"
requires-python = ">=3.10"
license = {file='LICENSE'}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Natural Language :: Russian",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython"
]

dynamic = ["dependencies", "optional-dependencies"]


[project.scripts]
disk-api = "cloud.__main__:main"
disk-db = "cloud.db.__main__:main"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements.dev.txt"] }}


[project.urls]
"Homepage" = "https://github.com/R0v4n/enrollment_autumn_2022"
